--- a/core.yaml.example
+++ b/core.yaml.example
@@ -3,7 +3,7 @@ APP:
   ENV: local
   URL: localhost
   PORT: 3200
-  KEY: abcdefgqwertyz
+  KEY: ABCD01234567Eabec234wertyufg2343
   ENDPOINT: /v1
 
 ROUTES:
@@ -39,9 +39,9 @@ DATABASE:
 AUTHORIZATION:
   JWT:
     IS_ACTIVE: true
-    ACCESS_TOKEN_SECRET_KEY: abcdefgqwerty
+    ACCESS_TOKEN_SECRET_KEY: ABCD01234567Eabec234wertyufg2343
     ACCESS_TOKEN_DURATION: 30
-    REFRESH_TOKEN_SECRET_KEY: abcdefgqwertyz
+    REFRESH_TOKEN_SECRET_KEY: ABCD01234567Eabec234wertyufg2343
     REFRESH_TOKEN_DURATION: 365
   PUBLIC:
     SECRECT_KEY: ^qwertyuiop
